init.php created

--- a/Pages to develop/individual_sample.html
+++ b/Pages to develop/individual_sample.html
@@ -20,12 +20,13 @@
 <body>
 
 
-    <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="search.html">Search</a></li>
-      <li><a href="registration.html">Register</a></li>
-      <li><a href="submission.html">Add Location</a></li>
-    </ul>
+  <ul>
+    <li><a href="#home">Home</a></li>
+    <li><a href="search.html">Search</a></li>
+    <li><a href="registration.html">Register</a></li>
+    <li><a href="login.html">Login</a></li>
+    <li><a href="submission.html">Add Location</a></li>
+  </ul>
 
   <div class="modal">
 
