--- a/Pages to develop/login.html
+++ b/Pages to develop/login.html
@@ -25,28 +25,17 @@
     <form class="modal-content"  style="background-color:rgba(215, 233, 248, 0.7)" name="form_registration">
       <div class="container">
         <h1>
-          Hi, this is a registration page.
+          Login
         </h1>
         <p>Please fill out your details in the form below </p>
         <input class="textbox" type="text" name= "username" placeholder="Username"  >
         <br>
-        <input class="textbox" type="text" name= "firstname" placeholder="First Name"  >
-        <br>
-        <input class="textbox" type="text" name="lastname" placeholder="Last Name" >
-        <br>
-        <input class="textbox" type="email" name="email" placeholder="Email Address" >
-        <br>
-        <input class="textbox" type="password" name="password" placeholder="Choose Password" >
-        <br>
-        <input class="textbox" type="password" name="password_confirm" placeholder="Confirm Password" >
-        <br>
-        <input class="checkbox" type="checkbox" name="checkbox"> I agree with the <a href="URL_TO_TERMS_AND_CONDITIONS" style="color:0a14ff"> Terms of Service</a>. </input>
+        <input class="textbox" type="password" name="password" placeholder="Enter Password" >
         <br>
         <br>
         <button class="btnSubmit" type="button" onclick="return validate(form_registration);" ><span> Let's Parkour! </span></button>
         <br>
-        <p>Already an existing user? <a href="login.html"> Sign In </a>
-        <br>
+        <p>New User? <a href="registration.html"> Register </a>
       </div>
     </form>
   </div>
