--- a/Pages to develop/results_sample.html
+++ b/Pages to develop/results_sample.html
@@ -22,6 +22,7 @@
     <li><a href="#home">Home</a></li>
     <li><a href="search.html">Search</a></li>
     <li><a href="registration.html">Register</a></li>
+    <li><a href="login.html">Login</a></li>
     <li><a href="submission.html">Add Location</a></li>
   </ul>
 
