--- a/Pages to develop/submission.html
+++ b/Pages to develop/submission.html
@@ -27,9 +27,9 @@
     <li><a href="#home">Home</a></li>
     <li><a href="search.html">Search</a></li>
     <li><a href="registration.html">Register</a></li>
+    <li><a href="login.html">Login</a></li>
     <li><a href="submission.html">Add Location</a></li>
   </ul>
-
 
 
   <div class="modal">
